Migrate advancement to fungible AP v4.5.0
